Bug 355313 - Can't copy from gwenview listing
Summary: Can't copy from gwenview listing
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: Other (add details in bug description)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-13 22:38 UTC by Bob K
Modified: 2017-02-10 01:05 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.12.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bob K 2015-11-13 22:38:49 UTC
If i select files in the thumbnail view, and press ctrl-c, only the last selected element's basename makes it's way onto the clipboard.

Like:
IMG_20151113_203222.jpg

Instead of how it worked previously:
file://some/path/1.jpg
file://some/path/2.jpg
file://some/path/3.jpg

This way i can't copy out of gwenview:( 



Reproducible: Always

Steps to Reproduce:
1. Select files
2. Press ctrl-c
3. Press ctrl-v in kate or in a file browser.

Actual Results:  
IMG_20151113_203222.jpg

Expected Results:  
file://some/path/1.jpg
file://some/path/2.jpg
file://some/path/3.jpg

meta@x220:~$ gwenview --version
org.kde.gwenview 15.08.2
Comment 1 Aleksander Kwiatkowski 2016-01-04 14:32:08 UTC
I can confirm it on "org.kde.gwenview 15.08.3"
Comment 2 Frank Steinmetzger 2016-08-24 18:21:00 UTC
Here's a quick “me too” for bug confirmation, using 16.04.3 on Gentoo.
Comment 3 Frank Steinmetzger 2017-02-09 23:58:13 UTC
I had a quick look at the code and the application. I think we are dealing with a simple typo here:

app/fileopscontextmanageritem.cpp:186
-actionCollection->setDefaultShortcut(d->mCopyAction, Qt::Key_F7);
+actionCollection->setDefaultShortcut(d->mCopyToAction, Qt::Key_F7);
Comment 4 Christoph Feck 2017-02-10 01:04:45 UTC
Git commit 1182058adaa07758584ace0aad06331b8e8cea8b by Christoph Feck, on behalf of Frank Steinmetzger.
Committed on 10/02/2017 at 01:02.
Pushed by cfeck into branch 'Applications/16.12'.

Fix wrong action name for setDefaultShortcut()

Reviewed by Christoph Feck.
FIXED-IN: 16.12.3

M  +1    -1    app/fileopscontextmanageritem.cpp

https://commits.kde.org/gwenview/1182058adaa07758584ace0aad06331b8e8cea8b
Comment 5 Christoph Feck 2017-02-10 01:05:13 UTC
Nice spot, merci :)