Fix wrong action name for setDefaultShortcut()

Reviewed by Christoph Feck.

BUG: 355313
FIXED-IN: 16.12.3